Package: future.BatchJobs
=========================

Version: 0.10.0-9000 [2016-05-16]
o Add package vignette.
o Now BatchJobsFutureError extends FutureError.
o BUG FIX: backend("multicore-3") was interpreted as
  backend("multicore").


Version: 0.10.0 [2016-05-03]
o Now the BatchJobsFutureError records the captured BatchJobs
  output to further simplify post mortem troubleshooting.
o Now delete() for BatchJobsFuture will not remove the BatchJobs
  registry files if the BatchJobs has status 'error' or 'expired'
  and (new) option 'future.delete' is not set to FALSE (which it
  is if running in interactive mode).  The new setup is useful
  for troubleshooting failed BatchJobs futures in non-interactive
  R sessions, which otherwise would be cleaned out when the R
  session terminates (due to garbage collection calling delete()).
o BUG FIX: resolved() on a BatchJobs future could return FALSE
  even after value() was called.  Added package test.


Version: 0.9.0 [2016-04-15]
o Package renamed to future.BatchJobs (was async).
o Package requires R (>= 3.2.0) just so Mandelbrot demo works.
o STANDARIZATION Now using option and environment names already defined
  by the future package, i.e. future.maxTries, future.interval, and
  R_FUTURE_MAXTRIES (used to be named async::* and R_ASYNC_*).
o STANDARIZATION: Directories for BatchJobs are now created under
  .future/<session>/ of the current directory (was .async/<session>/).
  Also, those subdirectories now use prefix 'BatchJobs_' (was 'async').
  This was done to have a common directory structure also for other
  future backends that needs to keep files on the file system.
o CLEANUP: Renamed AsyncTaskError to BatchJobsFutureError.
o CLEANUP: Dropping AsyncListEnv.


Version: 0.8.0 [2016-04-14]
o batchjobs() function gained class attribute.
o Renamed BatchJobsAsyncTask to BatchJobsFuture.
o CLEANUP: Removed no-longer needed asyncBatchEvalQ() because
  BatchJobsFuture is now self sufficient.